# CalendarAgent1

./: .gitignore  README.md  customer_success_calendar_report.json  may_2026_customer_success_calendar_report.json  pyproject.toml
analyst_agent/: __init__.py  agent.py  cli.py  customer_success_calendar_agent.py  data_tools.py  google_calendar_weekly.py
